# digital_visual_computer

./: Makefile  dvc.cmd  dvc.py  pyproject.toml  pytest.ini  requirements.txt
docs/process/: start-over-protocol.md
docs/research/: 274_machine_dvc.txt  274_machine_dvc12.txt  274_machine_dvc123.txt  274_machine_dvc12345.txt  274_machine_dvc123456.txt  274_machine_dvc1234567.txt  274_machine_dvc12345678.txt  274_machine_dvc123456789.txt  274_machine_dvc212.txt  274_machine_dvc2123.txt  274_machine_dvc21234.txt  274_machine_dvc212345.txt  274_machine_dvc2123456.txt  274_machine_dvc21234567.txt  274_machine_dvc212345678.txt  274_machine_dvc2123456789.txt  274_machine_dvc_ROADMAP.txt  274_machine_dvc_ROADMAP12.txt  280_ai_runtime12.txt  280_ai_runtime123.txt  280_ai_runtime1234.txt  280_ai_runtime12345.txt  281_ai_runtime_to_pxos.txt  281_ai_runtime_to_pxos12.txt  281_ai_runtime_to_pxos123.txt  281_ai_runtime_to_pxos1234.txt  281_ai_runtime_to_pxos12345.txt  281_ai_runtime_to_pxos123456.txt  281_ai_runtime_to_pxos1234567.txt  281_ai_runtime_to_pxos12345678.txt  281_ai_runtime_to_pxos123456789.txt  281_ai_runtime_to_pxos2123456.txt  281_ai_runtime_to_pxos21234567.txt  281_ai_runtime_to_pxos212345678.txt  281_ai_runtime_to_pxos2123456789.txt  Pixel ISA v0.1 Specification_.md  README_DVC.md  Screen as AI Runtime_.md
scripts/: gen_simple_2x2_png.py
specs/001-dvc-vm-core/: plan.md  spec.md  tasks.md
specs/002-dvc-v0-1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dvc-v0-1/contracts/: README.md  dvc-run.md  dvc-verify.md
specs/003-color-language-v0/: data-model.md  plan.md  research.md  spec.md
specs/003-color-language-v0/contracts/: README.md  color-compile.md  color-run.md
src/color_lang/: __init__.py  compiler.py  decoder.py  exceptions.py  lower.py  palette.py
src/dvc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dvc_cli/: color_commands.py  main.py
src/dvc_cli/commands/: run_command.py
src/dvc_core/: bundle.py  hash_chain.py  opcodes.py  program.py  trace_models.py  verifier.py  vm.py  vm_state.py
src/lib/: program_loader.py  trace_serializer.py
tests/: test_utils.py
tests/color_lang/: test_decoder.py  test_palette.py
tests/color_lang/fixtures/: simple_2x2_palette.json
tests/contract/: test_color_compile.py  test_color_run.py  test_dvc_run_contract.py  test_dvc_verify_contract.py
tests/integration/: test_bundle.py  test_color_e2e.py  test_e2e_quickstart.py  test_hash_chain_verification.py  test_trace_format.py  test_vm_determinism.py
